romeo and juliet html pages

--- a/english-literature/gcse-texts/romeo-and-juliet/learn-folders/essay-plans/fate_essay_plan.html
+++ b/english-literature/gcse-texts/romeo-and-juliet/learn-folders/essay-plans/fate_essay_plan.html
@@ -464,7 +464,7 @@
           <div class="separator"></div>
           <h3>Essay Plans</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../essay-plans/fate_essay_plan.html">Fate essay plan</a>
             </li>
             <li style="margin-bottom: 10px">
@@ -532,7 +532,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../aic-pdfs/";
+      const pdfUrl = "../../raj-pdfs/";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
