--- a/r+j template.html
+++ b/r+j template.html
@@ -291,272 +291,172 @@
         <div class="sidebar">
           <button style="border-radius: 5px" id="sidebar-toggle">◀</button>
           <div class="separator"></div>
-          <h3>Learn R&J</h3>
+          <h3>Learn Romeo And Juliet</h3>
           <li style="margin-bottom: 10px">
-            <a href="../../learn-folders/">Learn</a>
+            <a href="../learn-raj/learn.html">Learn</a>
           </li>
           <div class="separator"></div>
           <h3>Notes</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/notes/"
+              <a href="../notes/how_to_make_notes_for_shakespeares_plays.html"
                 >How To Make Notes For Shakespeare's plays</a
               >
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/notes/summary.html">Summary</a>
+              <a href="../notes/summary.html">Summary</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/notes/context.html">Context</a>
+              <a href="../notes/context.html">Context</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/notes/grade_9_key_words.html"
-                >Grade 9 Key Words</a
-              >
+              <a href="../notes/grade_9_key_words.html">Grade 9 Key Words</a>
             </li>
           </ul>
           <div class="separator"></div>
           <h3>Key Themes</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/key-themes/mr_birling.html"
-                >Mr Birling</a
+              <a href="../key-themes/romeo_key_themes.html">Romeo Key Themes</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../key-themes/juliet_key_themes.html"
+                >Juliet Key Themes</a
               >
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/key-themes/mrs_birling.html"
-                >Mrs Birling</a
+              <a href="../key-themes/lord_capulate_key_themes.html"
+                >Lord Capulate Key Themes</a
               >
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/key-themes/sheila.html">Sheila</a>
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/key-themes/eric.html">Eric</a>
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/key-themes/gerald.html">Gerald</a>
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/key-themes/inspector.html"
-                >Inspector</a
+              <a href="../key-themes/lady_capulet_key_themes.html"
+                >Lady Capulate Key Themes</a
               >
             </li>
             <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/key-themes/responsibility_theme_table.html"
-                >Responsibility Theme Table</a
+              <a href="../key-themes/the_friar_key_themes.html"
+                >The Friar Laurence</a
               >
             </li>
             <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/key-themes/social_class_theme_table.html"
-                >Social Class Theme Table</a
+              <a href="../key-themes//tybalt_key_themes.html"
+                >Tybalt Key Themes</a
               >
             </li>
             <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/key-themes/older_vs_younger_theme_table.html"
-                >Olders vs Younger Theme Table</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/key-themes/capitalism_vs_socialism_theme_table.html"
-                >Capitalism vs Socialism Theme Table</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/key-themes/guilt_theme_table.html"
-                >Guilt Theme Table</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/key-themes/gender_theme_table.html"
-                >Gender Theme Table</a
+              <a href="../key-themes/the_nurse_key_themes.html"
+                >The Nurse Key Themes</a
               >
             </li>
           </ul>
           <div class="separator"></div>
-          <h3>Mr Birling</h3>
+          <h3>Romeo</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/mr-birling/mr_birling_act_1.html"
-                >Mr Birling Act 1</a
-              >
+              <a href="../romeo/romeo_act_1.html">Romeo Act 1</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/mr-birling/mr_birling_act_2.html"
-                >Mr Birling Act 2</a
-              >
+              <a href="../romeo/romeo_act_2.html">Romeo Act 2</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/mr-birling/mr_birling_act_3.html"
-                >Mr Birling Act 3</a
-              >
+              <a href="../romeo/romeo_act_3.html">Romeo Act 3</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/mr-birling/summarised_notes.html"
-                >Summarised Notes</a
-              >
+              <a href="../romeo/romeo_act_4.html">Romeo Act 4</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/mr-birling/mr_birling_theme_table.html"
-                >Mr Birling Theme Table</a
-              >
+              <a href="../romeo/romeo_act_5.html">Romeo Act 5</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../romeo/romeo_theme_table.html">Romeo Theme Table</a>
             </li>
           </ul>
           <div class="separator"></div>
           <h3>Mrs Birling</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/mrs-birling/mrs_birling_act_1.html"
-                >Mrs Birling Act 1</a
+              <a href="../juliet/juliet_act_1.html">Juliet Act 1</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../juliet/juliet_act_2.html">Juliet Act 2</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../juliet/juliet_act_3.html">Juliet Act 3</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../juliet/juliet_act_4.html">Juliet Act 4</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../juliet/juliet_act_5.html">Juliet Act 5</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../juliet/juliet_theme_table.html">Juliet Theme Table</a>
+            </li>
+          </ul>
+          <div class="separator"></div>
+          <h3>The Capulets</h3>
+          <ul>
+            <li style="margin-bottom: 10px">
+              <a href="../the-capulets/lord_capulate.html">Lord Capulate</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../the-capulets/lord_capulate_theme_table.html"
+                >Lord Capulate Theme Table</a
               >
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/mrs-birling/mrs_birling_act_2.html"
-                >Mrs Birling Act 2</a
-              >
+              <a href="../the-capulets/lady_capulate.html">Lady Capulate</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/mrs-birling/mrs_birling_act_3.html"
-                >Mrs Birling Act 3</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/mrs-birling/summarised_notes.html"
-                >Summarised Notes</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/mrs-birling/mrs_birling_theme_table.html"
-                >Mrs Birling Theme Table</a
+              <a href="../the-capulets/lady_capulate_theme_table.html"
+                >Lady Capulate Theme Table</a
               >
             </li>
           </ul>
           <div class="separator"></div>
-          <h3>Sheila</h3>
+          <h3>Mercutio</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/sheila/sheila_act_1.html"
-                >Sheila Act 1</a
-              >
+              <a href="../mercutio/mercutio.html">Mercutio</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/sheila/sheila_act_2.html"
-                >Sheila Act 2</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/sheila/sheila_act_3.html"
-                >Sheila Act 3</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/sheila/summarised_notes.html"
-                >Summarised Notes</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/sheila/sheila_theme_table.html"
-                >Sheila Theme Table</a
+              <a href="../mercutio/mercutio_theme_table.html"
+                >Mercutio Theme Table</a
               >
             </li>
           </ul>
           <div class="separator"></div>
-          <h3>Eric</h3>
+          <h3>Friar Lawrence</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/eric/eric_act_1.html">Eric Act 1</a>
+              <a href="../friar-lawrence/the_friar.html">The Friar</a>
             </li>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/eric/eric_act_2.html">Eric Act 2</a>
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/eric/eric_act_3.html">Eric Act 3</a>
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/eric/summarised_notes.html"
-                >Summarised Notes</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/eric/eric_theme_table.html"
-                >Eric Theme Table</a
+              <a href="../friar-lawrence/the_friar_theme_table.html"
+                >The Friar Theme Table</a
               >
             </li>
           </ul>
           <div class="separator"></div>
-          <h3>Gerald</h3>
+          <h3>Tybalt</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/gerald/gerald_act_1.html"
-                >Gerald Act 1</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/gerald/gerald_act_2.html"
-                >Gerald Act 2</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/gerald/gerald_act_3.html"
-                >Gerald Act 3</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/gerald/summarised_notes.html"
-                >Summarised Notes</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/gerald/gerald_theme_table.html"
-                >Gerald Theme Table</a
-              >
+              <a href="../tybalt/tybalt.html">Tybalt</a>
             </li>
           </ul>
           <div class="separator"></div>
-          <h3>The Inspector</h3>
+          <h3>The Nurse</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/the-inspector/the_inspector_act_1.html"
-                >Inspector Act 1</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/the-inspector/the_inspector_act_2.html"
-                >Inspector Act 2</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/the-inspector/the_inspector_act_3.html"
-                >Inspector Act 3</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/the-inspector/summarised_notes.html"
-                >Summarised Notes</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/the-inspector/the_inspector_theme_table.html"
-                >Inspector Theme Table</a
-              >
+              <a href="../the-nurse/the-nurse.html">The Nurse</a>
             </li>
           </ul>
           <div class="separator"></div>
           <h3>Practice Questions</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/practice-questions/aqa_style_practice_questions.html"
+              <a href="../practice-questions/aqa_style_practice_questions.html"
                 >AQA Style Practice Questions</a
               >
             </li>
@@ -565,20 +465,16 @@
           <h3>Essay Plans</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/essay-plans/guilt_essay_plan.html"
-                >Guilt essay plan</a
+              <a href="../essay-plans/fate_essay_plan.html">Fate essay plan</a>
+            </li>
+            <li style="margin-bottom: 10px">
+              <a href="../essay-plans/love_and_violence_essay_plan.html"
+                >Love and Violence essay plan</a
               >
             </li>
             <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/essay-plans/social_responsibility_essay_plan.html"
-                >Social responsibility essay plan</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/essay-plans/mrs_birling_essay_plan.html"
-                >Mrs Birling essay plan</a
+              <a href="../essay-plans/individual_vs_society_essay_plan.html"
+                >Individual vs society essay plan</a
               >
             </li>
           </ul>
@@ -586,8 +482,7 @@
           <h3>Past Paper Questions</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a
-                href="../../learn-folders/past-paper-questions/aqa_past_paper_questions.html"
+              <a href="../past-paper-questions/aqa_past_paper_questions.html"
                 >AQA Past Paper Questions</a
               >
             </li>
@@ -597,49 +492,14 @@
           <ul>
             <li style="margin-bottom: 10px">
               <a
-                href="../../learn-folders/grade-9-essays/how_does_priestley_present_society_as_unfair.html"
-                >How does Priestley present society as unfair?</a
+                href="../grade-9-essays/relationship_between_adults_and_young_people.html"
+                >Relationship between adults and young people</a
               >
             </li>
             <li style="margin-bottom: 10px">
               <a
-                href="../../learn-folders/grade-9-essays/how_does_priestley_present_society_as_irr"
-                >How far does Priestley present male characters as
-                irresponsible?</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/"
-                >How does Priestley use Mr Birling to present his concerns in
-                society?</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/"
-                >How does Priestley use Mrs Birling to explore ideas about
-                social class?</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/"
-                >How is Sheila presented as a character who changes?</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/"
-                >How far is Eric presented as a character who changes?</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/"
-                >How does Priestley use Gerald Croft's status to show his ideas
-                about society?</a
-              >
-            </li>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/"
-                >How does Priestley use the Inspector to suggest ways society
-                could be improved?</a
+                href="../grade-9-essays/relationship_between_romeo_and_juliet.html"
+                >Relationship between Romeo and Juliet</a
               >
             </li>
           </ul>
@@ -660,7 +520,7 @@
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../aic-pdfs/"
+              src="../../raj-pdfs/"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -672,7 +532,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../aic-pdfs/";
+      const pdfUrl = "../../raj-pdfs/";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
