--- a/english-literature/gcse-texts/romeo-and-juliet/learn-folders/tybalt/tybalt.html
+++ b/english-literature/gcse-texts/romeo-and-juliet/learn-folders/tybalt/tybalt.html
@@ -520,7 +520,7 @@
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../raj-pdfs/"
+              src="../../raj-pdfs/Tybalt/Tybalt.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -532,7 +532,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../raj-pdfs/";
+      const pdfUrl = "../../raj-pdfs/Tybalt/Tybalt.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
