--- a/english-language/paper-one/learn-folders/Grade 9 Essays/2020_past_paper_answered.html
+++ b/english-language/paper-one/learn-folders/Grade 9 Essays/2020_past_paper_answered.html
@@ -543,7 +543,7 @@
           <div class="separator"></div>
           <h3>Grade 9 Essays</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/Grade 9 Essays/2020_past_paper_answered.html"
                 >2020 Past Paper Answered</a
