--- a/english-language/paper-one/learn-folders/Notes/how_to_plan_language_questions.html
+++ b/english-language/paper-one/learn-folders/Notes/how_to_plan_language_questions.html
@@ -412,7 +412,7 @@
                 >Structure Techniques</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/notes/how_to_plan_language_questions.html"
                 >How To Plan Language Papers</a
@@ -562,7 +562,7 @@
           </ul>
         </div>
         <div class="main-content">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe
               src="https://www.youtube-nocookie.com/embed/"
               frameborder="0"
@@ -570,14 +570,14 @@
               loading="lazy"
               allowfullscreen
             ></iframe>
-          </div>
+          </div> -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../paper-one-pdfs/"
+              src="../../paper-one-pdfs/notes/how to plan language questions.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -589,7 +589,8 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../paper-one-pdfs/";
+      const pdfUrl =
+        "../../paper-one-pdfs/notes/how to plan language questions.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
