--- a/english-language/paper-one/learn-folders/Question 2/question_2.html
+++ b/english-language/paper-one/learn-folders/Question 2/question_2.html
@@ -431,7 +431,7 @@
           <div class="separator"></div>
           <h3>Question 2</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/Question 2/question_2.html"
                 >Question 2</a
               >
@@ -571,13 +571,14 @@
               allowfullscreen
             ></iframe>
           </div>
+          JEZLER
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../paper-one-pdfs/"
+              src="../../paper-one-pdfs/question 2/question 2.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
