--- a/english-language/paper-one/learn-folders/Learn/language_paper_1_summary.html
+++ b/english-language/paper-one/learn-folders/Learn/language_paper_1_summary.html
@@ -387,7 +387,7 @@
                 >Full Past Paper 1</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/Learn/language_paper_1_summary.html"
                 >Language Paper 1 Summary</a
               >
@@ -571,13 +571,14 @@
               allowfullscreen
             ></iframe>
           </div>
+          <!-- JEZLER FIX -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../paper-one-pdfs/"
+              src="../../paper-one-pdfs/learn/Language Paper 1 Summary.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -589,7 +590,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../paper-one-pdfs/";
+      const pdfUrl = "../../paper-one-pdfs/learn/Language Paper 1 Summary.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
