--- a/english-language/paper-one/learn-folders/Notes/language_technique_sheets.html
+++ b/english-language/paper-one/learn-folders/Notes/language_technique_sheets.html
@@ -402,7 +402,7 @@
                 >How To Make Notes For Language Papers</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/notes/language_technique_sheets.html"
                 >Language Technique Sheet</a
               >
@@ -562,7 +562,7 @@
           </ul>
         </div>
         <div class="main-content">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe
               src="https://www.youtube-nocookie.com/embed/"
               frameborder="0"
@@ -570,14 +570,14 @@
               loading="lazy"
               allowfullscreen
             ></iframe>
-          </div>
+          </div> -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../paper-one-pdfs/"
+              src="../../paper-one-pdfs/notes/language-technique-sheet.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -589,7 +589,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../paper-one-pdfs/";
+      const pdfUrl = "../../paper-one-pdfs/notes/language-technique-sheet.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
