--- a/english-language/paper-one/learn-folders/Question 5 - creative writing/creative_writing_vocab.html
+++ b/english-language/paper-one/learn-folders/Question 5 - creative writing/creative_writing_vocab.html
@@ -458,7 +458,7 @@
           <div class="separator"></div>
           <h3>Question 5 - creative writing</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/Question 5 - creative writing/creative_writing_vocab.html"
                 >Creative Writing Vocab</a
@@ -562,7 +562,7 @@
           </ul>
         </div>
         <div class="main-content">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe
               src="https://www.youtube-nocookie.com/embed/"
               frameborder="0"
@@ -570,14 +570,14 @@
               loading="lazy"
               allowfullscreen
             ></iframe>
-          </div>
+          </div> -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../paper-one-pdfs/"
+              src="../../paper-one-pdfs/question 5/creative-writing-vocab.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -589,7 +589,8 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../paper-one-pdfs/";
+      const pdfUrl =
+        "../../paper-one-pdfs/question 5/creative-writing-vocab.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
