add button href

--- a/english-language/paper-one/index.html
+++ b/english-language/paper-one/index.html
@@ -456,11 +456,15 @@
         <div class="panel">
           <div class="topic">
             <span>Full Past Paper 1</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Language Paper 1 Summary</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -468,7 +472,9 @@
         <div class="panel">
           <div class="topic">
             <span>Write down structure for each question</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -476,19 +482,27 @@
         <div class="panel">
           <div class="topic">
             <span>How To Make Notes For Language Papers</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Language Technique Sheet</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Structure Techniques</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How To Plan Language Questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -496,7 +510,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 1</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -504,7 +520,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 2</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -512,7 +530,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 3</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -520,7 +540,9 @@
         <div class="panel">
           <div class="topic">
             <span>Question 4</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -528,19 +550,27 @@
         <div class="panel">
           <div class="topic">
             <span>Creative Writing Vocab</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Question 5 - Creative Writing</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Question 5 (Creative Writing) Past Paper Question</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>How to adapt any piece of creative writing</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -548,15 +578,21 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -564,15 +600,21 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -580,15 +622,21 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
@@ -596,15 +644,21 @@
         <div class="panel">
           <div class="topic">
             <span>2020 Past Paper Answered</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Hot Description</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
           <div class="topic">
             <span>Cold Description</span>
-            <button class="start-learning">Start Learning</button>
+            <a href="learn-folders/">
+              <button class="start-learning">Start Learning</button>
+            </a>
           </div>
         </div>
         <!--####################################################################################-->
