--- a/english-literature/poems/index.html
+++ b/english-literature/poems/index.html
@@ -105,6 +105,30 @@
         background-color: var(--button-hover);
       }
 
+      .back-button {
+        width: 50px;
+        height: 50px;
+        background-color: transparent;
+        border: none;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        padding: 0;
+      }
+
+      .back-button svg {
+        width: 100%;
+        height: 100%;
+        transition: transform 0.2s, fill 0.3s;
+        fill: var(--text-color);
+      }
+
+      .back-button:hover svg {
+        transform: scale(1.1);
+      }
+
       #mode-toggle {
         position: fixed;
         top: 20px;
@@ -134,8 +158,24 @@
   </head>
   <body>
     <button id="mode-toggle">Toggle Dark Mode</button>
-
     <header>
+      <div class="back-button-container">
+        <a href="../index.html" aria-label="Back To GCSE Texts">
+          <button aria-label="Back Button" class="back-button">
+            <svg
+              fill="#000000"
+              width="30px"
+              height="30px"
+              viewBox="0 0 200 200"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M100,15a85,85,0,1,0,85,85A84.93,84.93,0,0,0,100,15Zm0,150a65,65,0,1,1,65-65A64.87,64.87,0,0,1,100,165ZM116.5,57.5a9.67,9.67,0,0,0-14,0L74,86a19.92,19.92,0,0,0,0,28.5L102.5,143a9.9,9.9,0,0,0,14-14l-28-29L117,71.5C120.5,68,120.5,61.5,116.5,57.5Z"
+              />
+            </svg>
+          </button>
+        </a>
+      </div>
       <h1>GCSE Texts</h1>
     </header>
 
